# swagger-rs

./: Cargo.toml  README.md  out.md
src/: ast.rs  axum.rs  funcs.rs  main.rs  method_call.rs  test.rs
src/tests/: mod.rs  semaphore.rs
src/tests/test_cases/: 2.input  2.json  basic_1.input  basic_1.json
tests/: mod.rs
tests/tests_cases/: basic_1.input
