[package]
name = "swagger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.15"
syn = { version = "1.0.99", features = ["full", "extra-traits"] }
difference = "2.0.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
