[package]
name = "swagger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.15"
syn = { version = "1.0.99", features = ["full", "extra-traits"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
regex = "1.6.0"
lazy_static = "1.4.0"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
serde_yaml = "0.9.10"
